src/v8/CAPI_Lines.pas

 
end;
//------------------------------------------------------------------------------
function Lines_Get_NormAmps():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).NormAmps;
  End
end;
//------------------------------------------------------------------------------
procedure Lines_Set_EmergAmps(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         EmergAmps := Value;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_NormAmps(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         NormAmps := Value;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Geometry_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).GeometryCode;
  End
end;

function Lines_Get_Geometry():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Geometry_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Geometry(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Parser[ActiveActor].CmdString := 'geometry='+Value;
         Edit(ActiveActor);
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Rg():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).Rg;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Rho():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).rho;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Xg():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).Xg;
  End
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rg(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Parser[ActiveActor].CmdString := Format('rg=%.7g', [Value]);
         Edit(ActiveActor);
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rho(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Parser[ActiveActor].CmdString := Format('rho=%.7g', [Value]);
         Edit(ActiveActor);
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xg(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL THEN
  If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement) THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Parser[ActiveActor].CmdString := Format('xg=%.7g', [Value]);
         Edit(ActiveActor);
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Yprim(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
{ Return the YPrim matrix for this element }

VAR
  Result: PDoubleArray;
   iV      : Integer;
   i       : Integer;
   NValues : Integer;
   cValues : pComplexArray;

begin
   IF ActiveCircuit[ActiveActor] = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE With ActiveCircuit[ActiveActor] Do
      If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement) THEN
      WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do  Begin
          NValues := SQR(Yorder);
          cValues := GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
          If cValues=Nil Then Begin   // check for unassigned array
                            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array
                            Exit;  // Get outta here
                         End;
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);  // Make variant array
          iV := 0;

          FOR i := 1 to  NValues DO  Begin    // Plunk the values in the variant array
              Result[iV] := cValues^[i].re;
              Inc(iV);
              Result[iV] := cValues^[i].im;
              Inc(iV);
          End;
      End
      ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Lines_Get_Yprim_GR();cdecl;
// Same as Lines_Get_Yprim but uses global result (GR) pointers
begin
   Lines_Get_Yprim(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;

begin
    Value := PDoubleArray(ValuePtr);
     IF ActiveCircuit[ActiveActor] <> NIL Then  Begin
       {Do Nothing for now}
     End;
end;
//------------------------------------------------------------------------------
function Lines_Get_NumCust():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).BranchNumCustomers  ;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_TotalCust():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).BranchTotalCustomers  ;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Parent():Integer;cdecl;
{ Sets the Active Line to the immediately upline Line obj, if any}
{ Returns line index  or 0 if it fails or no more lines}

Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit[ActiveActor] <> Nil Then
     If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement) then
     Begin
          pLine := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement);
          If pLine.ParentPDelement <> Nil Then
          Begin
              If (pLine.ParentPDelement.Enabled) and (IsLine(pLine.ParentPDelement)) Then
              Begin
                ActiveCircuit[ActiveActor].ActiveCktElement := pLine.ParentPDElement;
                Result := ActiveCircuit[ActiveActor].Lines.ActiveIndex;
              End;
          End;
     End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Count():Integer;cdecl;
begin
    If Assigned(ActiveCircuit[ActiveActor]) Then
          Result := ActiveCircuit[ActiveActor].Lines.ListSize ;
end;
//------------------------------------------------------------------------------
function Lines_Get_Spacing_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).SpacingCode;
  End
end;

function Lines_Get_Spacing():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Spacing_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Spacing(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Parser[ActiveActor].CmdString := 'spacing='+Value;
         Edit(ActiveActor);
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Units():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).LengthUnits;
  End

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Units(Value: Integer);cdecl;
{
 This code assumes the present value of line units is NONE.
 The Set functions in this interface all set values in this length unit.
}
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
          if Value < dssLineUnitsMaxnum  then
            begin
               Parser[ActiveActor].CmdString := Format('units=%s', [LineUnitsStr(Value)]);
               Edit(ActiveActor);
               YprimInvalid[ActiveActor] := True;
            end
          else
            DoSimpleMsg('Invalid line units integer sent via COM interface.  Please enter a value within range.',183);

       END;
  End;
end;
//------------------------------------------------------------------------------
END.
